Bug 67783 - FORMATTING: Conditional formatting problem
Summary: FORMATTING: Conditional formatting problem
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-05 11:12 UTC by Rupert Parsons
Modified: 2014-08-15 12:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with conditional formatting (alternate colours) (16.90 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-08-05 11:12 UTC, Rupert Parsons
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rupert Parsons 2013-08-05 11:12:11 UTC
Created attachment 83657 [details]
Spreadsheet with conditional formatting (alternate colours)

I set up conditional formatting in Calc such that different background colours appear on alternate rows. If new rows are inserted directly below the rows where the conditional formatting is applied, the new rows correctly display the alternate background colours. However, when the spreadsheet document is saved, closed and then reopened, the new rows lose the alternate background colours (i.e. the conditional formatting is lost). See the attached file.

It should be noted that this problem was not inherited from OpenOffice. If the attached file is opened in OpenOffice and new rows are inserted in the same way (i.e. directly below the conditional formatting range), the alternate colours applied to the new rows are preserved after document reopening.
Comment 1 Markus Mohrhard 2013-09-05 01:17:13 UTC
This is a problem of the new conditional format storage. I'll see what I can do to fix it.
Comment 2 Commit Notification 2013-09-05 12:53:08 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5d9e062a68eaf7544d02501d7b221150d74f7555

increase conditional format range during inserting rows/cols, fdo#67783



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-09-05 12:53:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd2f96c2ff83bee968fec8aa7c402ae02e78e2e4

add test case for fdo#67783



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2013-11-23 02:57:27 UTC
I assume this is fixed and the bug's status was not set accordingly. Doing so. If this was wrong then please reopen with a comment.
Comment 5 Rupert Parsons 2013-11-25 11:29:32 UTC
I have tested with version 4.1.3.2 and the bug still occurs
Comment 6 Markus Mohrhard 2013-12-02 04:39:42 UTC
(In reply to comment #5)
> I have tested with version 4.1.3.2 and the bug still occurs

This is only fixed in 4.2.0

Please check the whiteboard line before you reopen bug reports.
Comment 7 Rupert Parsons 2013-12-02 09:50:13 UTC
Apologies..thanks for fixing the bug