increase conditional format range during inserting rows/cols, fdo#67783

Change-Id: Ib74667fb958aa9bbbcae3a0289b3cbd6edf8fb37